# django-eventual-wip

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  pyproject.toml
eventual/: __init__.py  apps.py  conf.py  job.py  manager.py  signals.py  utils.py
example/: Procfile  eventual  manage.py  pyproject.toml  shell.sh
example/mysite/: settings.py  tasks.py
example/polls/migrations/: 0001_initial.py
