[tool.poetry]
name = "django-eventual-poc"
version = "0.1.0"
description = ""
authors = ["Sheena Artrip <sheena.artrip@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
django = "3.2.0"
funcy = "^1.17"

[tool.poetry.dev-dependencies]
black = "^22.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
